--- a/src/css/romana-mtb.css
+++ b/src/css/romana-mtb.css
@@ -11,7 +11,6 @@ body {
 }
 
 
-/* COMPUTADOR */
 /* Cabeçalho */
 header {
     background-color: #000000bf;
@@ -46,10 +45,11 @@ header nav a:hover {
 /* Conteudo */
 #content div {
     position: relative;
-    top: 150px;
     font-weight: bold;
-    margin-left: 5%;
-    margin-right: 5%;
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-top: 150px;
+    padding-bottom: 50px;
 }
 #content img {
     margin: 15px;
@@ -70,12 +70,9 @@ header nav a:hover {
     margin: 15px;
 }
 #content a {
-    color: #fff; 
+    color: #427fdb; 
     text-decoration: none;
     transition: color 0.3s ease-in-out;
-}
-#content a:hover {
-    color: #aaa;
 }
 
 /* Rodapé */
@@ -92,11 +89,9 @@ footer p {
 }
 
 
-/* CELULAR */
+/* Tela < 800px */
 @media (max-width: 800px /* min-width: 450px */) {
     /* Cabeçalho */
-    header {
-    }
     header img {
         margin: 15px;
     }
@@ -107,8 +102,6 @@ footer p {
         float: initial;
         margin-left: 15px;
         font-size: 20px;
-    }
-    header nav a {
     }
 
     /* Conteudo */
@@ -134,12 +127,8 @@ footer p {
     #content p {
         margin: 15px;
     }
-    #content a {
-    }
 
     /* Rodapé */
-    footer {
-    }
     footer p {
         margin: 10px;
     }
