--- a/src/css/romana-mtb.css
+++ b/src/css/romana-mtb.css
@@ -48,7 +48,7 @@ header nav a:hover {
     font-weight: bold;
     padding-left: 5%;
     padding-right: 5%;
-    padding-top: 150px;
+    padding-top: 15vh;
     padding-bottom: 50px;
 }
 #content img {
@@ -106,7 +106,6 @@ footer p {
 
     /* Conteudo */
     #content div {
-        top: 150px;
         margin-left: 5%;
         margin-right: 5%;
     }
