--- a/src/css/romana-mtb.css
+++ b/src/css/romana-mtb.css
@@ -49,8 +49,8 @@ header nav a:hover {
     font-weight: bold;
     padding-left: 5%;
     padding-right: 5%;
-    padding-top: 15vh;
-    padding-bottom: 5vh;
+    padding-top: 150px;
+    padding-bottom: 50px;
 }
 #content img {
     margin: 15px;
@@ -76,6 +76,9 @@ header nav a:hover {
     color: #427fdb; 
     text-decoration: none;
     transition: color 0.3s ease-in-out;
+}
+#content a:hover {
+    color: #2f5eb6;
 }
 
 /* Rodapé */
@@ -148,6 +151,10 @@ footer p {
     }
     
     /* Conteudo */
+    #content div {
+        padding-top: 110px;
+        padding-bottom: 35px;
+    }
     #content h1 {
         font-size: 35px;
     }
