--- a/src/css/romana-mtb.css
+++ b/src/css/romana-mtb.css
@@ -166,6 +166,9 @@ footer p {
         font-size: 35px;
     }
     #content h3 {
+        font-size: 15px;
+    }
+    #content h4 {
         font-size: 12px;
     }
     #content p {
