--- a/src/css/romana-mtb.css
+++ b/src/css/romana-mtb.css
@@ -156,7 +156,7 @@ footer p {
     }
     
     /* Conteudo */
-    #content div {
+    #content {
         padding-top: 110px;
         padding-bottom: 35px;
     }
