--- a/regulamento/style.css
+++ b/regulamento/style.css
@@ -1,14 +1,1 @@
-/* Regulamento PDF */
-#regulamento-pdf {
-    height: 75vh;
-    width: 100%;
-}
-
-/* Regulamento imagem */
-#content #regulamento-img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 100%;
-    max-height: 75vh;
-}
+#regulamento-pdf{height:75vh;width:100%}#content #regulamento-img{display:block;margin-left:auto;margin-right:auto;max-width:100%;max-height:75vh}
